--- a/main/ig/valider_res.html
+++ b/main/ig/valider_res.html
@@ -40,7 +40,8 @@
   <body onload="document.body.style.opacity='1'">
 
 	  <script src="assets/js/prism.js"></script>
-
+    <script src="assets/js/mermaid.js" type="text/javascript"></script>
+    <script src="assets/js/mermaid-init.js" type="text/javascript"></script>
     <style type="text/css">h2{--heading-prefix:"3.4"}
     h3,h4,h5,h6{--heading-prefix:"3.4"}</style>
     <div id="segment-header" class="segment">    <!-- segment-header -->
@@ -51,7 +52,12 @@
   </div>
   <div style="line-height: 50px; float: left; margin-top: 4px; margin-bottom: 8px; color: #808080; " id="ans-nav">
     <a no-external="true" id="hl7-logo" href="https://esante.gouv.fr/"><img src="assets/images/logo-ANS.svg" alt="ANS Logo" height="50"/></a>
+    <a no-external="true" id="hl7-search-lnk" href="searchform.html"><img src="assets/images/search.png" alt="Search FHIR"/></a>
   </div>
+
+  <div id="ig-search">
+ </div>
+
 
         <div id="ig-status">
           <p><span style="font-size:12pt;font-weight:bold">Documentation des guides d'implémentation de l'ANS</span>
@@ -60,7 +66,7 @@
 
 
 
-  <img src="assets/images/fra.svg" alt="France flag" title="France" height="16"/>
+  <img src="assets/images/zwe.svg" alt=" flag" title="null" height="16"/>
 
 
             </span>
@@ -237,7 +243,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 <ul>
   <li><a href="https://validator.fhir.org">FHIR Validator</a></li>
-  <li><a name="l418">​</a><a href="[https://test.ahdis.ch/matchbox](https://test.ahdis.ch/matchbox/#/)">Matchbox</a></li>
+  <li><a name="l428">​</a><a href="[https://test.ahdis.ch/matchbox](https://test.ahdis.ch/matchbox/#/)">Matchbox</a></li>
 </ul>
 
 <h3 id="validation-avec-hapi-fhir-et-lopération-validate">Validation avec HAPI FHIR et l’opération $Validate</h3>
@@ -336,7 +342,7 @@ Pour cela, il faudra utiliser l’opération <a href="https://www.hl7.org/fhir/r
 
       <div class="inner-wrapper">
         <p>
-          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, Jul 11, 2024 09:47+0000">2024-07-11</span>
+          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, Feb 20, 2025 13:15+0000">2025-02-20</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
