--- a/nr-refacto/ig/dev_nouvel_ig.html
+++ b/nr-refacto/ig/dev_nouvel_ig.html
@@ -230,7 +230,8 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 <p>Prérequis : suivre la <a href="https://ansforge.github.io/Documentation">documentation</a> pour créer un compte GitHub et l’associer à l’organisation ANS.</p>
 
-<p>Ce nouveau projet doit utiliser le GitHub template ansforge/IG-modele et doit être préfixé par “IG-…”. Le repository GitHub doit être nommé de sorte qu’il soit facilement retrouvé et compréhensible par n’importe qui : descriptif, lisible, cohérent, contextuel, extensible, réutilisable et bref (Exemple : IG-fhir-partage-de-documents-de-sante). 
+<p>Ce nouveau projet doit utiliser le GitHub template ansforge/IG-modele et doit respecter la convention de nommage indiquée dans la <a href="https://ansforge.github.io/Documentation/pages/docs/creationprojet.html">documentation de création des 
+répetoires GitHub</a> tout en étant préfixé par “IG-…” (Exemple : IG-fhir-partage-de-documents-de-sante). 
 En cas de doute, l’équipe interopérabilité de l’ANS se tient disponible pour avis.</p>
 
 <p>Une fois l’IG créé, il est nécessaire de le personnaliser pour le projet dédié.</p>
@@ -473,7 +474,7 @@ bash _genonce.sh <span class="c"># Génère l'IG</span>
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Fri, Feb 21, 2025 16:50+0000">2025-02-21</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Fri, Feb 21, 2025 16:59+0000">2025-02-21</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
