--- a/nr-update-github-best-practice/ig/github.html
+++ b/nr-update-github-best-practice/ig/github.html
@@ -269,7 +269,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
   <li>implementation-guide (trop générique et dans le titre)</li>
   <li>HL7 (trop générique, risque d'être confondu avec hl7v2)</li>
   <li>volet (inutile, trop générique)</li>
-  <li>Redondance entre le nom du repo et le tag à éviter</li>
+  <li>Sous-ensemble du nom du répertoire</li>
 </ul>
 
 <h3 id="reporter-un-problème-une-issue-sur-un-des-repository-github">Reporter un problème (une issue) sur un des repository GitHub</h3>
@@ -394,7 +394,7 @@ Le xxx est à remplacer avec l'indication dans ssh :</p>
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Feb 25, 2025 16:28+0000">2025-02-25</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Feb 25, 2025 16:32+0000">2025-02-25</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
